<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="started">Started:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="cell_text">Run at %1$s</string>

    <string name="new_run">New Run</string>

    <string name="delete_run">Delete Run</string>

    <string name="current_run_id">Current Run ID</string>

    <string name="map">Map</string>
    <string name="run_start">Run Start</string>
    <string name="run_started_at_format">Run started at %s</string>
    <string name="run_finish">Run Finish</string>
    <string name="run_finished_at_format">Run finished ad %s</string>

</resources>
